[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Enemies.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy/Bat.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 1.5 )

[sub_resource type="Animation" id=2]
resource_name = "Bat_anim"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 55, 54 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 5.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 1 )
texture = ExtResource( 1 )
hframes = 9
vframes = 7
frame = 54

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -0.5 )
shape = SubResource( 1 )

[node name="Bat_Animation" type="AnimationPlayer" parent="."]
anims/Bat_anim = SubResource( 2 )

[node name="Body" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="Body" to="." method="_on_Body_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
